2009-03-06 Nicolas Bourdaud <nicolas.bourdaud@epfl.ch>

* lpttrigger.h : Make it C compatible