@@ -1,3 +1,8 @@
+#if HAVE_CONFIG_H
+# include <config.h>
+#endif
+
+
 #include "lptwriter.h"
 #include <stdio.h>
 #include <sys/types.h>
