@@ -1,3 +1,8 @@
+#if HAVE_CONFIG_H
+# include <config.h>
+#endif
+
+
 #include <windows.h>
 #include <cstdlib>
 #include "Winio.h"
