@@ -1,3 +1,9 @@
+#if HAVE_CONFIG_H
+# include <config.h>
+#endif
+
+
+
 #include <stdio.h>
 #include <string.h>
 #include "lpttrigger.h"
