@@ -1,3 +1,6 @@
 2009-03-06 Nicolas Bourdaud <nicolas.bourdaud@epfl.ch>
 
 * lpttrigger.h : Make it C compatible
+
+* lpttrigger.c, testport.c, lptwriter-linux.c, lptwriter-win32.cpp: Include
+config header if necessary
